--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </a>
 <nav>
     <ul>
-        <li><a href="">Product</a></li>
-        <li><a href="">Pricing</a></li>
-        <li><a href="">Customers</a></li>
+        <li><a href="./index.html">Product</a></li>
+        <li><a href="./pricing.html">Pricing</a></li>
+        <li><a href="./customers.html">Customers</a></li>
         <li><a href="">Resources</a></li>
     </ul>
 </nav>
