fixed all pages

--- a/customers.html
+++ b/customers.html
@@ -23,6 +23,131 @@
             <li><button type="button">Sign In</button></li>
             <li><button type="button">Sign Up</button></li>
         </ul>
-        </header>  
+        </header>
+        <main>
+            <!-- OUR CLIENTS -->
+             <section>
+                <h2>Our Clients</h2>
+                <ul>
+                    <li><img src="./images/Airbnb Logo.svg" alt="logo" width="159" height="50">
+                    </li>
+                    <li><img src="./images/Google Logo.svg" alt="logo" width="146" height="50">
+                    </li>
+                    <li><img src="./images/Microsoft Logo.svg" alt="logo" width="213" height="44">
+                    </li>
+                    <li><img src="./images/FedEx Logo.svg" alt="logo" width="140" height="42">
+                    </li>
+                </ul>
+             </section>
+            <!-- WHY CHOOSE PRODUCT -->
+             <section>
+                <h2>Why Choose Product?</h2>
+                <ul>
+                    <li>
+                        <img src="./images/icon-1.svg" alt="icon-1" width="54" height="54">
+                        <h3>Special Business</h3>
+                        <p>Product helps you see how many
+                        more days you need to work
+                        to reach your financial goal     for the month and year.</p>
+                    </li>
+                    <li>
+                        <img src="./images/icon-2.svg" alt="icon-2" width="54" height="54">
+                        <h3>Instant Result</h3>
+                        <p>Product helps you see how many 
+more days you need to work 
+to reach your financial goal 
+for the month and year.
+Product helps you see how many 
+more days you need to work 
+to reach your financial goal 
+for the month and year.
+Product helps you see how many 
+more days you need to work 
+to reach your financial goal 
+for the month and year.</p>
+                    </li>
+                    <li>
+                        <img src="./images/icon-8.png" alt="icon-8" width="54" height="54">
+                        <h3>Fastest way to organize</h3>
+                        <p>Product helps you see how many 
+more days you need to work 
+to reach your financial goal 
+for the month and year.
+Product helps you see how many 
+more days you need to work 
+to reach your financial goal 
+for the month and year.
+Product helps you see how many 
+more days you need to work 
+to reach your financial goal 
+for the month and year.</p>
+                    </li>
+                </ul>
+             </section>
+<!-- HOW PRODUCT WORK -->
+<section>
+    <h2>How Product Work?</h2>
+    <ul>
+        <li>
+            <img src="./images/mac1.png" alt="macbook-1" width="500" height="279.23">
+            <h4>step 1</h4>
+            <h3>Apply for a product</h3>
+            <p>Completing our easy step-by-step application form gives you access to multiple business with multiple products. We analyse your business through our proprietary credit analysis technology </p>
+        </li>
+        <li>
+            <img src="./images/mac2.png" alt="macbook-2" width="500" height="279.57">
+            <h4>step 2</h4>
+            <h3>Pay fully refundable</h3>
+            <p>Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available, your fee will be fully refunded.</p>
+        </li>
+        <li>
+            <img src="./images/mac3.png" alt="macbook-3" width="385.47" height="240.89">
+            <h4>step 3</h4>
+            <h3>Completion</h3>
+            <p>Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement</p>
+        </li>
+    </ul>
+    <button type="button">Get in touch with us</button>
+</section>
+<!-- Join thousand of other who have
+    already received offers -->
+<section>
+    <h2>Join thousand of other who have
+    already received offers</h2>
+    <ul>
+        <li>
+            <img src="./images/Image Placeholder.png" alt="icon-9" width="150" height="150">
+            <h3>Business</h3>
+            <p>Cash Flow
+Asset Backed
+Receivables Finance
+Site Acquisition
+Bridge 
+Development Financing</p>
+<h4>Find the best business product</h4>
+        </li>
+        <li>
+            <img src="./images/Image Placeholder-2.png" alt="icon-10" width="150" height="150">
+            <h3>Enterprise</h3>
+            <p>Cash Flow
+Asset Backed
+Receivables Finance
+Site Acquisition
+Bridge 
+Development Financing</p>
+<h4>Find the best business product</h4>
+        </li>
+    </ul>
+</section>
+<!-- GREEN BOX -->
+<section>
+    <h2>Join 100 Compannies who boost their business with Product</h2>
+    <button type="button">Get This</button>
+    <img src="./images/graphics.png" alt="graphics" width="351" height="331">
+</section>
+        </main>
+        <footer>
+
+        </footer>  
 </body>
 </html>
