--- a/index.html
+++ b/index.html
@@ -36,6 +36,159 @@
         </ul>
         <img src="./images/hero-img.svg" alt="hero image" width="610" height="555">
     </section>
+
+    <!------------- PRODUCT --------------->
+
+    <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
+            <li>
+                <img src="./images/icon-1.svg" alt="icon-1" width="54" height="54">
+                <h3>First click tests</h3>
+                <p>While most people enjoy casino gambling,</p>
+            </li>
+            <li>
+                <img src="./images/icon-2.svg" alt="icon-2" width="54" height="54">
+                <h3>Design surveys</h3>
+                <p>Sports betting, lottery and bingo playing for the fun</p>
+            </li>
+            <li>
+                <img src="./images/icon-3.svg" alt="icon-3" width="54" height="54">
+                <h3>Preference tests</h3>
+                <p>The Myspace page defines the individual.</p>
+            </li>
+            <li>
+                <img src="./images/icon-4.svg" alt="icon-4" width="54" height="54">
+                <h3>Five second tests</h3>
+                <p>Personal choices and the overall personality of the person. </p>
+            </li>
+        </ul>
+        <button type="button">sign up now</button>
+    </section>
+
+    <!-- PROFESSIONS -->
+     <section>
+        <h2 hidden>Professions</h2>
+        <h4>Effortless Validation for</h4>
+        <h3>Management</h3>
+        <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall
+        personality of the person.</p>
+        <ul>
+            <li>
+                <h4>Accessory makers</h4>
+                <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+            </li>
+            <li>
+                <h4>Alterationists</h4>
+                <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+            </li>
+        </ul>
+        <img src="./images/management-img.svg" alt="papers" width="540" height="500">
+     </section>
+     <secrion>
+        <img src="./images/support-img.svg" alt="laptop" width="540" height="500">
+        <h4>Easier decision making for</h4>
+        <h3>Customer Support</h3>
+        <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall
+        personality of the person.</p>
+        <ul>
+            <li>
+                <img src="./images/icon-5.svg" alt="icon-5" width="35.07" height="35">
+                <p>Never worry about overpaying for your energy again. </p>
+            </li>
+            <li>
+                <img src="./images/icon-6.svg" alt="icon-6" width="35.07" height="35">
+                <p>We will only switch you to energy companies that we trust and will treat you right</p>
+            </li>
+            <li>
+                <img src="./images/icon-7.svg" alt="icon-7" width="35.07" height="35">
+                <p>We track the markets daily and know where the savings are.</p>
+            </li>
+        </ul>
+     </secrion>
+     <section>
+        <h4>Optimisation for</h4>
+        <h3>Collaborative</h3>
+        <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double
+        standard when it comes to their behavior.</p>
+        <ul>
+            <li>
+                <h4>Accessory makers</h4>
+                <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+            </li>
+            <li>
+                <h4>Alterationists</h4>
+                <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+            </li>
+        </ul>
+        <img src="./images/collaboration-img.svg" alt="collaboration" width="540" height="500">
+     </section>
+
+<!-- PROCESS -->
+
+    <section>
+        <h3>Quick & Easy Process</h3>
+        <p>Do you require some help for your project: Conception workshop,
+        prototyping, marketing strategy, landingpage, Ux/UI?</p>
+        <ul>
+            <li>
+                <img src="./images/avatar.png" alt="photo" width="98" height="98">
+                <p>I can take care of your pitch</p>
+            </li>
+            <li>
+                <p>I can take care of your pitch</p>
+                <img src="./images/avatar-2.png" alt="photo-2" width="98" height="98">
+            </li>
+            <li>
+                <p>I can prototype your app</p>
+                <img src="./images/avatar-3.png" alt="photo-3" width="98" height="98">
+            </li>
+            <li>
+                <img src="./images/avatar-4.png" alt="photo-4" width="98" height="98">
+                <p>I can help marketing strategy</p>
+            </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+    </section>
+
+    <!-- Contents Strategies -->
+
+    <section>
+        <h2>Contents Strategies</h2>
+        <p>We focus on ergonomics and meeting you where you work. It's only a keystroke away.</p>
+        <ul>
+            <li>
+                <a href="">
+                <img src="./images/image bg.jpg" alt="writing" width="350" height="185">
+                <p>By Wahid Ari |  03 March 2019</p>
+                <h3>Increasing Prosperity With Positive Thinking</h3>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                <img src="./images/Bitmap-1.png" alt="people are near the windows" width="350" height="189">
+                <p>By Wahid Ari | 03 March 2019</p>
+                <h3>Motivation Is The First Step To Success</h3>
+            </a>
+            </li>
+            <li>
+                <a href="">
+                <img src="./images/Bitmap.png" alt="building" width="350" height="186">
+                <p>By Wahid Ari | 03 March 2019</p>
+                <h3>Success Steps For Your Personal Or Business</h3>
+            </a>
+            </li>
+        </ul>
+    </section>
+    <!-- GREEN BOX -->
+     <section>
+        <h2>Join 100 Compannies who boost their business with Product</h2>
+        <button type="button">Get This</button>
+        <img src="./images/graphics.png" alt="graphics" width="351" height="331">
+     </section>
    </main>
+   <footer>
+
+   </footer>
 </body>
 </html>
