--- a/pricing.html
+++ b/pricing.html
@@ -24,5 +24,72 @@
             <li><button type="button">Sign Up</button></li>
         </ul>
         </header> 
+        <main>
+            <!-- ENTERPRISE -->
+             <section>
+                <h3>Enterprise</h3>
+                <h2>Are you interested in a custom-tailored plan?</h2>
+                <p>Product is a set of advanced features for really large teams with projects.</p>
+                <button type="button">Get in touch with us</button>
+             </section>
+             <!-- PRODUCT -->
+              <section>
+                <h2>Product is being used with great effects alongside:</h2>
+                <img src="./images/amico.png" alt="two laptop" width="528" height="392">
+                <ul>
+                    <li>
+                        <img src="./images/Feature Icon with circle.png" alt="icon" width="50" height="50">
+                        <h3>Enterpreneur</h3>
+                        <p>Product is a great way to help medium and samall enterprise owners achieve their goals</p>
+                    </li>
+                    <li>
+                        <img src="./images/Feature Icon with circle-2.png" alt="icon" width="50" height="50">
+                        <h3>Accountants</h3>
+                        <p>Whether you are working on contract with clients, or on other key accounting documents, Product is for you</p>
+                    </li>
+                    <li>
+                        <img src="./images/Feature Icon with circle-3.png" alt="icon" width="50" height="50">
+                        <h3>Universities</h3>
+                        <p>Organize university projects and have documents easily graded online with Product</p>
+                    </li>
+                </ul>
+              </section>
+              <!-- Frequently asked question -->
+               <section>
+                <h2>Frequently asked question</h2>
+                <p>Something is not clear? You need help? Check our FAQ section</p>
+                <ul>
+                    <li>
+                        <img src="./images/plus_circle.png" alt="icon-plus" width="24" height="24">
+                        <p>What are my payment option?</p>
+                    </li>
+                    <li>
+                        <img src="./images/minus_circle.png" alt="icon-minus" width="24" height="24">
+                        <p>How can I invite collaborator to platform?</p>
+                        <p>After creating your account you will have an oppurtunity to create your first project that will be associated withthe
+                            collaborators e-mail. An invitation will be sent automatically. Then, invited user will have to confirm his account
+                            by
+                            e-mail and finish userd onboarding.</p>
+                    </li>
+                    <li>
+                        <img src="./images/plus_circle.png" alt="icon-plus" width="24" height="24">
+                        <p>Can I upgrade my plan?</p>
+                    </li>
+                    <li>
+                        <img src="./images/plus_circle.png" alt="icon-plus" width="24" height="24">
+                        <p>Can I cancel my plan at anytime?</p>
+                    </li>
+                </ul>
+               </section>
+            <!-- GREEN BOX -->
+            <section>
+                <h2>Join 100 Compannies who boost their business with Product</h2>
+                <button type="button">Get This</button>
+                <img src="./images/graphics.png" alt="graphics" width="351" height="331">
+            </section>
+         </main> 
+        <footer>
+
+        </footer>
 </body>
 </html>
